--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,8 @@
     <h2>JsonPlaceHolder Parser</h2>
     
     <a th:href="@{'/users'}">Users</a><br>
-    <a th:href="@{'/posts'}">All Posts</a>
+    <a th:href="@{'/posts'}">All Posts</a><br>
+    <a th:href="@{'/photos'}">View Photos</a><br>
     
    </body>
 </html>
